--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
-  text-align: center;
+.main {
+  margin: 20px auto;
+  display: block;
+  width: 800px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.nav-wrapper {
+  width: 100%;
+  background-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav {
+  margin: 0 auto;
+  background-color:black;
   color: white;
+  width: 1000px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart {
+  align-content: flex-end;
 }
